# Snake-AI

./: CMakeLists.txt  README.md  run.sh
include/: Agent.hpp  Game.hpp  Model.hpp  Pellet.hpp  Snake.hpp  SnakeAI.hpp  Vec2i.hpp  Window.hpp
src/: Agent.cpp  Game.cpp  Model.cpp  Pellet.cpp  Snake.cpp  Window.cpp  main.cpp
